Fixed some permission issues

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,9 @@ versions = versions
 parts += omelette
 
 [versions]
+Pillow=
 plone.app.testing=4.2.2
+setuptools=
 
 [test]
 defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
